--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-svg-loader": "^0.16.0"
   },
