add filter input

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@crossangle/decimal-standards": "^1.0.8",
     "core-js": "^3.6.5",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
